--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
     flex-direction: column;
     justify-content: center;
     background-color: var(--Violet);
-    background-image: url('/images/bg-mobile.svg');
+    background-image: url('bg-mobile.svg');
     background-size: cover;
     width: auto;
     height: auto;
@@ -158,7 +158,7 @@ body{
     flex-direction: column;
     align-items: center;
     background-color: var(--Violet);
-    background-image: url('/images/bg-desktop.svg');
+    background-image: url('bg-desktop.svg');
     background-size: cover;
     width: auto;
     height: auto;
